# SphereSimulator

./: .gitignore  .gitmodules  Base64.hpp  Buffer.hpp  CMakeLists.txt  CPSolver.cpp  Communicator.cpp  Communicator.hpp  Config.cpp  Config.h  CustomKernel.hpp  Doxyfile  EigenDef.hpp  FMMWrapper.cpp  FMMWrapper.h  Fig_lubroll.py  Fig_lubsedi.py  Gauss_Legendre_Nodes_and_Weights.hpp  GradUNearEval.hpp  HydroSphere.cpp  HydroSphere.h  HydroSphereType.hpp  ImplementationNotes.md  InteractionManager.hpp  LaplaceLayerKernel.hpp  LayerSphereSystem.cpp  LayerSphereSystem.hpp  Makefile  MakefileInc.mk  MortonID.hpp  NBNode.hpp  NBTree.hpp  NearInteraction.hpp  NearInteraction.txx  Operator.hpp  Preconditioner.cpp  README.md  SLVel.hpp  SPHExp.cpp  SPHExp.hpp  (+44 more)
BIE/: Operator.hpp  SphereOperator.hpp  SphereSPHOperator.cpp  SphereSPHOperator.hpp  SphereSTKMobMat.cpp  SphereSTKMobMat.hpp  SphereSTKSHOperator.cpp  SphereSTKSHOperator.hpp  lubdataTriangle
Collision/: CPSolver.cpp  CPSolver.hpp  CollisionCollector.hpp  CollisionSolver.cpp  CollisionSolver.hpp  CollisionSphere.hpp  SphereSystem.cpp
FDPS_Header/: NB_MPI_Node.hpp  NB_MPI_Tree.hpp  comm_table.hpp  interaction_list.hpp  particle_simulator.hpp  particle_system.hpp  ps_defs.hpp  tree.hpp  tree_for_force.hpp  tree_walk.hpp  vector2.hpp  vector3.hpp
Fortran/: Makefile  chebexps.f  dlaran.f  fftnext.f  fort.13  gaussq.f  hkrand.f  legeexps.f  pnmrts.f  prini.f  prinm.f  prinm_real.f  rotproj_cmpl.f  rotviajrec.f  rotviarecur3.f  second-r8.f  sphtrans.f  sphtrans.make  sphtrans_dr.f  sphtrans_real.f  sphtrans_real_dr.f  sphtrans_u_dr.f  sphtrans_x_dr.f  sphtrans_xu.f  sphtrans_xu_dr.f  xnmeva2.f  xnmeva2_dr.f  xrecursion.f  xrecursion2.f  yrecursion.f
MPI/: Buffer_test.cpp  CMakeLists.txt  InteractionManager.hpp  InteractionManager_test.cpp  NearInteraction.hpp  NearInteraction.txx  SyncManager.hpp  SyncManager_test.cpp
ModuleTest/Buffer/: Makefile  testBuffer.cpp
ModuleTest/Config/: testConfig.cpp
ModuleTest/EvalShexp/: Makefile  MakefileInc.mk  PointDistribution.cpp  PointDistribution.h  testShexp.cpp
ModuleTest/NearInteraction/: Makefile  testInteractionManager.cpp
ModuleTest/ParSort/: Makefile
ModuleTest/SPHExpDump/: Makefile  testDump.cpp
ModuleTest/ShexpDump/: Makefile  testDump.cpp
ModuleTest/ShexpTest/: Makefile  PointDistribution.h  testShexp.cpp
ModuleTest/SyncManager/: TestSyncManager.cpp
SRC/: Config.cpp  Config.h  SphereSystem.cpp  SphereSystem.hpp  main.cpp
STKFMM/: STKFMM.cpp  STKFMM.h
SimToolbox/: README.md
SimToolbox/Collision/: CPSolver.cpp  CPSolver.hpp  CollisionCollector.hpp  CollisionSolver.cpp  CollisionSolver.hpp  CollisionSphere.hpp  CollisionSylinder.hpp  DCPQuery.hpp
SimToolbox/MPI/: InteractionManager.hpp  NearInteraction.hpp  NearInteraction.txx  SyncManager.hpp
SimToolbox/ModuleTest/: MakefileInc.mk
SimToolbox/ModuleTest/Buffer/: testBuffer.cpp
SimToolbox/ModuleTest/LCPSolver/: Makefile  MatCheck.py  testLCPSolver.cpp
SimToolbox/ModuleTest/NearInteraction/: Makefile  testInteractionManager.cpp
SimToolbox/ModuleTest/ParSort/: Makefile  testParSort.cpp
SimToolbox/ModuleTest/ShexpTest/: Makefile  PointDistribution.cpp  testShexp.cpp
SimToolbox/ModuleTest/SylinderCollide/: Makefile  testCollisionSylinder.cpp
SimToolbox/ModuleTest/SylinderIO/: Makefile  testSylinderIO.cpp
SimToolbox/ModuleTest/SyncManager/: Makefile  testSyncManager.cpp
SimToolbox/ModuleTest/TCMAT/: Makefile  testTCMAT.cpp
SimToolbox/Protein/: Protein.cpp  Protein.hpp
SimToolbox/Sphere/: Shexp.cpp  Shexp.hpp  Sphere.cpp  Sphere.hpp
SimToolbox/Sylinder/: Sylinder.cpp  Sylinder.hpp
SimToolbox/Trilinos/: Preconditioner.hpp  TpetraUtil.cpp  TpetraUtil.hpp  ZDD.hpp
SimToolbox/Util/: Base64.cpp  Base64.hpp  Buffer.hpp  EigenDef.hpp  EquatnHelper.hpp  Gauss_Legendre_Nodes_and_Weights.hpp  GeoCommon.h  IOHelper.hpp  TRngPool.hpp
Sphere/: CMakeLists.txt  CollisionSphere.hpp  SPHExp.cpp  SPHExp.hpp  Shexp.cpp  Shexp.hpp  Shexp_test.cpp  Sphere.cpp  Sphere.hpp  Sphere_test.cpp
Test/Buffer/: Makefile  testBuffer.cpp
Test/Config/: Makefile
Test/FMM/: CustomKernel.hpp  Makefile  StokesCustomKernel.hpp  fmm.cpp  fmm.h  main.cpp
Test/FMM/stfmmlibsrc/: Makefile
Test/HydroSphereTest/: Makefile  MakefileInc.mk  TestHydroSphere.cpp
Test/SPHExpDump/: .gitignore  Makefile  main.cpp  testDump.cpp
Test/SPHTransform/: Makefile  SPHTrans.cpp
Test/STFMM/: .gitignore  Makefile  fmm.cpp  main.cpp
Test/STFMM/stfmmlibsrc/: Makefile
Test/SphtransTest/: test.cpp  test_spharm_stk.cpp
Test/SyncManager/: Makefile  TestSyncManager.cpp
Trilinos/: Preconditioner.hpp  TpetraUtil.cpp  TpetraUtil.hpp
Util/: Base64.hpp  Buffer.hpp  EigenDef.hpp  EquatnHelper.hpp  Gauss_Legendre_Nodes_and_Weights.hpp  IOHelper.hpp  QuaternionHelper.hpp  TRngPool.hpp  Timer.hpp
cmake/: FindMSGPACK.cmake  FindPVFMM.cmake  FindTRNG.cmake
result/: Result2PVD.py  VTP2CSV.py  clean.sh  compress.sh  mpiperf.txt  spherestkvis.pvsm  visForceDensityChain.pvsm  visall.sh  xyz2vtkSphere.py
result/PNG/: MovieGen.sh
scripts/: Submit.sh  SyncLocalRun.sh  SyncRustyRun.sh  do-cmake.sh  genInit.py  jobsub.slurm  run_ompi.sh
sctl/: comm.txx  fft_wrapper.hpp  legendre_rule.cpp  legendre_rule.hpp  matrix.hpp  mem_mgr.hpp  sph_harm.hpp  sph_harm.txx  vector.hpp
